--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
         <label for="opcao-bolos">Bolos</label>
         <input type="radio" name="opcao" id="opcao-bebidas">
         <label for="opcao-bebidas">Bebidas</label>
-        <img src="img/menu-bolos.png" alt="Menu Bolos" id="menu-bolos" class="menu" >
-        <img src="img/menu-bebidas.png" alt="Menu Bebidas" id="menu-bebidas" class="menu" >
+        <div class="container-menus">
+            <img src="img/menu-bolos.png" alt="Menu Bolos" id="menu-bolos" class="menu" >
+            <img src="img/menu-bebidas.png" alt="Menu Bebidas" id="menu-bebidas" class="menu" >
+        </div>
     </body>
 </html>
 
